FIX include transfers

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,13 @@
       </div>
       <!-- END Target Account Config -->
 
+      <div class="mv4">
+        <h3>Options</h3>
+        <label class="flex items-center">
+          <input type="checkbox" id="from_emails" class="br0 mr2"> Transfer from_email addresses
+        </label>
+      </div>
+
     </section>
     <!-- END Credentials "form" -->
 
@@ -67,7 +74,7 @@
       <div id="error-modal" class="no-display"></div>
       <div id="response-modal" class="no-display w-100 pa3 pr5 h-100 overflow-y-scroll tl"></div>
       <div id="loading-modal" class="flex w-100 flex-column justify-around pa5 no-display">
-        <img src="/sailboat.svg" style="height: 50%;" />
+        <img src="/sailboat.svg" style="height: 150px;" />
         <p>Transferring templates to Sailthru...</p>
       </div>
     </div>
